// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mikrotik full config generator > generates scripts for access-crs-trunk-access.json 1`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: access-switch-crs
# Hostname: ACCESS-CRS-01
# RouterOS: 7.12.1
# Environment: dev
# Mode: APPLY
### BASE
/system identity set name=ACCESS-CRS-01
/system clock set time-zone-name="Asia/Ho_Chi_Minh"
/ip service set telnet disabled=yes
/ip service set ftp disabled=yes
/ip service set www disabled=yes
/ip service set api disabled=yes
/ip service set api-ssl disabled=yes

### BRIDGE/VLAN
/interface bridge add name=br-sw vlan-filtering=yes comment="NETOPSAI"
/interface bridge port add bridge=br-sw interface=ether1 comment="NETOPSAI:trunk Uplink trunk"
/interface bridge port add bridge=br-sw interface=ether2 comment="NETOPSAI:access Staff access"
/interface bridge port add bridge=br-sw interface=ether3 comment="NETOPSAI:access Guest access"
/interface bridge port add bridge=br-sw interface=ether24 comment="NETOPSAI:mgmt OOB mgmt"
/interface vlan add name=vlan10-mgmt vlan-id=10 interface=br-sw comment="NETOPSAI:mgmt"
/interface vlan add name=vlan20-staff vlan-id=20 interface=br-sw comment="NETOPSAI:staff"
/interface vlan add name=vlan30-guest vlan-id=30 interface=br-sw comment="NETOPSAI:guest"
/interface bridge vlan add bridge=br-sw vlan-ids=10 tagged=br-sw,ether1 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-sw vlan-ids=20 tagged=br-sw,ether1 untagged=ether2 comment="NETOPSAI:vlan-table"
/interface bridge port set [find bridge=br-sw interface=ether2] pvid=20
/interface bridge vlan add bridge=br-sw vlan-ids=30 tagged=br-sw,ether1 untagged=ether3 comment="NETOPSAI:vlan-table"
/interface bridge port set [find bridge=br-sw interface=ether3] pvid=30

### FIREWALL
/interface list
:if ([:len [find name="NETOPSAI_WAN"]] = 0) do={ add name="NETOPSAI_WAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_LAN"]] = 0) do={ add name="NETOPSAI_LAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_MGMT"]] = 0) do={ add name="NETOPSAI_MGMT" comment="NETOPSAI" }
/interface list member add list="NETOPSAI_LAN" interface=ether1 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether2 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether3 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether24 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_MGMT" interface=ether24 comment="NETOPSAI:mgmt"
/ip firewall address-list
/ip firewall address-list add list=NETOPSAI_MGMT address=10.10.10.0/24 comment="NETOPSAI:mgmt"
/ip firewall filter
/ip firewall filter add chain=input connection-state=established,related action=accept comment="NETOPSAI:input established"
/ip firewall filter add chain=input connection-state=invalid action=drop comment="NETOPSAI:input invalid"
/ip firewall filter add chain=input protocol=icmp action=accept comment="NETOPSAI:input icmp"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=22 action=accept comment="NETOPSAI:input ssh mgmt"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=8291 action=accept comment="NETOPSAI:input winbox mgmt"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_WAN" action=drop comment="NETOPSAI:drop wan input"
/ip firewall filter add chain=input action=drop comment="NETOPSAI:input drop"
/ip firewall filter add chain=forward connection-state=established,related action=accept comment="NETOPSAI:fwd established"
/ip firewall filter add chain=forward connection-state=invalid action=drop comment="NETOPSAI:fwd invalid"
/ip firewall filter add chain=forward action=drop comment="NETOPSAI:fwd drop"

### SERVICES
/ip service set ssh disabled=no port=22
/ip service set winbox disabled=no port=8291
/ip dns set allow-remote-requests=no
"
`;

exports[`mikrotik full config generator > generates scripts for access-crs-trunk-access.json 2`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: access-switch-crs
# Hostname: ACCESS-CRS-01
# RouterOS: 7.12.1
# Environment: dev
# Mode: ROLLBACK
### BRIDGE/VLAN
/interface bridge remove [find name=br-sw]
/interface bridge port remove [find bridge=br-sw interface=ether1]
/interface bridge port remove [find bridge=br-sw interface=ether2]
/interface bridge port remove [find bridge=br-sw interface=ether3]
/interface bridge port remove [find bridge=br-sw interface=ether24]
/interface vlan remove [find name=vlan10-mgmt]
/interface vlan remove [find name=vlan20-staff]
/interface vlan remove [find name=vlan30-guest]
/interface bridge vlan remove [find bridge=br-sw vlan-ids=10]
/interface bridge vlan remove [find bridge=br-sw vlan-ids=20]
/interface bridge vlan remove [find bridge=br-sw vlan-ids=30]

### FIREWALL
/interface list member remove [find comment~"NETOPSAI:lan"]
/interface list member remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:addrlist"]
/ip firewall filter remove [find comment~"NETOPSAI:"]
"
`;

exports[`mikrotik full config generator > generates scripts for core-router-5-vlans.json 1`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: core-router
# Hostname: CORE-RT-01
# RouterOS: 7.12.1
# Environment: staging
# Mode: APPLY
### BASE
/system identity set name=CORE-RT-01
/system clock set time-zone-name="Asia/Ho_Chi_Minh"
/system ntp client set enabled=yes
/system ntp client set primary-ntp=162.159.200.1
/system ntp client set secondary-ntp=162.159.200.123
/ip service set telnet disabled=yes
/ip service set ftp disabled=yes
/ip service set www disabled=yes
/ip service set api disabled=yes
/ip service set api-ssl disabled=yes

### BRIDGE/VLAN
/interface bridge add name=br-core vlan-filtering=yes comment="NETOPSAI"
/interface bridge port add bridge=br-core interface=ether1 comment="NETOPSAI:trunk To distribution"
/interface bridge port add bridge=br-core interface=ether2 comment="NETOPSAI:trunk To access"
/interface bridge port add bridge=br-core interface=ether3 comment="NETOPSAI:mgmt OOB mgmt"
/interface vlan add name=vlan10-mgmt vlan-id=10 interface=br-core comment="NETOPSAI:mgmt"
/interface vlan add name=vlan20-staff vlan-id=20 interface=br-core comment="NETOPSAI:staff"
/interface vlan add name=vlan30-guest vlan-id=30 interface=br-core comment="NETOPSAI:guest"
/interface vlan add name=vlan40-server vlan-id=40 interface=br-core comment="NETOPSAI:server"
/interface vlan add name=vlan50-iot vlan-id=50 interface=br-core comment="NETOPSAI:iot"
/interface bridge vlan add bridge=br-core vlan-ids=10 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-core vlan-ids=20 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-core vlan-ids=30 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-core vlan-ids=40 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-core vlan-ids=50 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"

### IP/DHCP
/ip address add address=10.10.0.1/24 interface=vlan10-mgmt comment="NETOPSAI:gw vlan10"
/ip address add address=10.20.0.1/24 interface=vlan20-staff comment="NETOPSAI:gw vlan20"
/ip address add address=10.30.0.1/24 interface=vlan30-guest comment="NETOPSAI:gw vlan30"
/ip address add address=10.40.0.1/24 interface=vlan40-server comment="NETOPSAI:gw vlan40"
/ip address add address=10.50.0.1/24 interface=vlan50-iot comment="NETOPSAI:gw vlan50"

### ROUTING
/ip route add dst-address=0.0.0.0/0 gateway=10.10.0.254 distance=1 comment="NETOPSAI:static 0.0.0.0/0"

### FIREWALL
/interface list
:if ([:len [find name="NETOPSAI_WAN"]] = 0) do={ add name="NETOPSAI_WAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_LAN"]] = 0) do={ add name="NETOPSAI_LAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_MGMT"]] = 0) do={ add name="NETOPSAI_MGMT" comment="NETOPSAI" }
/interface list member add list="NETOPSAI_LAN" interface=ether1 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether2 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether3 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_MGMT" interface=ether3 comment="NETOPSAI:mgmt"
/ip firewall address-list
/ip firewall address-list add list=NETOPSAI_MGMT address=10.10.0.0/24 comment="NETOPSAI:mgmt"
/ip firewall filter
/ip firewall filter add chain=input connection-state=established,related action=accept comment="NETOPSAI:input established"
/ip firewall filter add chain=input connection-state=invalid action=drop comment="NETOPSAI:input invalid"
/ip firewall filter add chain=input protocol=icmp action=accept comment="NETOPSAI:input icmp"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=22 action=accept comment="NETOPSAI:input ssh mgmt"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=8291 action=accept comment="NETOPSAI:input winbox mgmt"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_WAN" action=drop comment="NETOPSAI:drop wan input"
/ip firewall filter add chain=input action=drop comment="NETOPSAI:input drop"
/ip firewall filter add chain=forward connection-state=established,related action=accept comment="NETOPSAI:fwd established"
/ip firewall filter add chain=forward connection-state=invalid action=drop comment="NETOPSAI:fwd invalid"
/ip firewall filter add chain=forward action=drop comment="NETOPSAI:fwd drop"

### SERVICES
/ip service set ssh disabled=no port=22
/ip service set winbox disabled=no port=8291
/ip dns set allow-remote-requests=no
"
`;

exports[`mikrotik full config generator > generates scripts for core-router-5-vlans.json 2`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: core-router
# Hostname: CORE-RT-01
# RouterOS: 7.12.1
# Environment: staging
# Mode: ROLLBACK
### BRIDGE/VLAN
/interface bridge remove [find name=br-core]
/interface bridge port remove [find bridge=br-core interface=ether1]
/interface bridge port remove [find bridge=br-core interface=ether2]
/interface bridge port remove [find bridge=br-core interface=ether3]
/interface vlan remove [find name=vlan10-mgmt]
/interface vlan remove [find name=vlan20-staff]
/interface vlan remove [find name=vlan30-guest]
/interface vlan remove [find name=vlan40-server]
/interface vlan remove [find name=vlan50-iot]
/interface bridge vlan remove [find bridge=br-core vlan-ids=10]
/interface bridge vlan remove [find bridge=br-core vlan-ids=20]
/interface bridge vlan remove [find bridge=br-core vlan-ids=30]
/interface bridge vlan remove [find bridge=br-core vlan-ids=40]
/interface bridge vlan remove [find bridge=br-core vlan-ids=50]

### IP/DHCP
/ip address remove [find comment~"NETOPSAI:gw vlan10"]
/ip address remove [find comment~"NETOPSAI:gw vlan20"]
/ip address remove [find comment~"NETOPSAI:gw vlan30"]
/ip address remove [find comment~"NETOPSAI:gw vlan40"]
/ip address remove [find comment~"NETOPSAI:gw vlan50"]

### ROUTING
/ip route remove [find comment~"NETOPSAI:static 0.0.0.0/0"]

### FIREWALL
/interface list member remove [find comment~"NETOPSAI:lan"]
/interface list member remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:addrlist"]
/ip firewall filter remove [find comment~"NETOPSAI:"]
"
`;

exports[`mikrotik full config generator > generates scripts for core-router-ospf-area0.json 1`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: core-router
# Hostname: CORE-OSPF-01
# RouterOS: 7.12.1
# Environment: staging
# Mode: APPLY
### BASE
/system identity set name=CORE-OSPF-01
/system clock set time-zone-name="Asia/Ho_Chi_Minh"
/system ntp client set enabled=yes
/system ntp client set primary-ntp=162.159.200.1
/system ntp client set secondary-ntp=162.159.200.123
/ip service set telnet disabled=yes
/ip service set ftp disabled=yes
/ip service set www disabled=yes
/ip service set api disabled=yes
/ip service set api-ssl disabled=yes

### BRIDGE/VLAN
/interface bridge add name=br-core vlan-filtering=yes comment="NETOPSAI"
/interface bridge port add bridge=br-core interface=ether1 comment="NETOPSAI:trunk Uplink trunk"
/interface bridge port add bridge=br-core interface=ether2 comment="NETOPSAI:trunk Downlink trunk"
/interface vlan add name=vlan10-mgmt vlan-id=10 interface=br-core comment="NETOPSAI:mgmt"
/interface vlan add name=vlan20-staff vlan-id=20 interface=br-core comment="NETOPSAI:staff"
/interface bridge vlan add bridge=br-core vlan-ids=10 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-core vlan-ids=20 tagged=br-core,ether1,ether2 comment="NETOPSAI:vlan-table"

### IP/DHCP
/ip address add address=10.10.0.1/24 interface=vlan10-mgmt comment="NETOPSAI:gw vlan10"
/ip address add address=10.20.0.1/24 interface=vlan20-staff comment="NETOPSAI:gw vlan20"

### ROUTING
/routing ospf instance add name=NETOPSAI-ospf router-id=10.10.0.1 comment="NETOPSAI:ospf"
/routing ospf area add name=NETOPSAI-area0 area-id=0.0.0.0 instance=NETOPSAI-ospf comment="NETOPSAI:ospf"
/routing ospf interface-template add networks=10.10.0.0/24 area=NETOPSAI-area0 comment="NETOPSAI:ospf"
/routing ospf interface-template add networks=10.20.0.0/24 area=NETOPSAI-area0 comment="NETOPSAI:ospf"
/routing ospf interface-template add interfaces=vlan10-mgmt passive=yes area=NETOPSAI-area0 comment="NETOPSAI:ospf passive vlan10-mgmt"

### FIREWALL
/interface list
:if ([:len [find name="NETOPSAI_WAN"]] = 0) do={ add name="NETOPSAI_WAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_LAN"]] = 0) do={ add name="NETOPSAI_LAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_MGMT"]] = 0) do={ add name="NETOPSAI_MGMT" comment="NETOPSAI" }
/interface list member add list="NETOPSAI_LAN" interface=ether1 comment="NETOPSAI:lan"
/interface list member add list="NETOPSAI_LAN" interface=ether2 comment="NETOPSAI:lan"
/ip firewall address-list
/ip firewall address-list add list=NETOPSAI_MGMT address=10.10.0.0/24 comment="NETOPSAI:mgmt"
/ip firewall filter
/ip firewall filter add chain=input connection-state=established,related action=accept comment="NETOPSAI:input established"
/ip firewall filter add chain=input connection-state=invalid action=drop comment="NETOPSAI:input invalid"
/ip firewall filter add chain=input protocol=icmp action=accept comment="NETOPSAI:input icmp"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=22 action=accept comment="NETOPSAI:input ssh mgmt"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=8291 action=accept comment="NETOPSAI:input winbox mgmt"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_WAN" action=drop comment="NETOPSAI:drop wan input"
/ip firewall filter add chain=input action=drop comment="NETOPSAI:input drop"
/ip firewall filter add chain=forward connection-state=established,related action=accept comment="NETOPSAI:fwd established"
/ip firewall filter add chain=forward connection-state=invalid action=drop comment="NETOPSAI:fwd invalid"
/ip firewall filter add chain=forward action=drop comment="NETOPSAI:fwd drop"

### SERVICES
/ip service set ssh disabled=no port=22
/ip service set winbox disabled=no port=8291
/ip dns set allow-remote-requests=no
"
`;

exports[`mikrotik full config generator > generates scripts for core-router-ospf-area0.json 2`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: core-router
# Hostname: CORE-OSPF-01
# RouterOS: 7.12.1
# Environment: staging
# Mode: ROLLBACK
### BRIDGE/VLAN
/interface bridge remove [find name=br-core]
/interface bridge port remove [find bridge=br-core interface=ether1]
/interface bridge port remove [find bridge=br-core interface=ether2]
/interface vlan remove [find name=vlan10-mgmt]
/interface vlan remove [find name=vlan20-staff]
/interface bridge vlan remove [find bridge=br-core vlan-ids=10]
/interface bridge vlan remove [find bridge=br-core vlan-ids=20]

### IP/DHCP
/ip address remove [find comment~"NETOPSAI:gw vlan10"]
/ip address remove [find comment~"NETOPSAI:gw vlan20"]

### ROUTING
/routing ospf interface-template remove [find comment~"NETOPSAI:ospf"]
/routing ospf area remove [find comment~"NETOPSAI:ospf"]
/routing ospf instance remove [find comment~"NETOPSAI:ospf"]

### FIREWALL
/interface list member remove [find comment~"NETOPSAI:lan"]
/interface list member remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:addrlist"]
/ip firewall filter remove [find comment~"NETOPSAI:"]
"
`;

exports[`mikrotik full config generator > generates scripts for edge-nat-simple.json 1`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: edge-internet
# Hostname: EDGE-NAT-01
# RouterOS: 7.12.1
# Environment: dev
# Mode: APPLY
### BASE
/system identity set name=EDGE-NAT-01
/system clock set time-zone-name="Asia/Ho_Chi_Minh"
/system ntp client set enabled=yes
/system ntp client set primary-ntp=162.159.200.1
/system ntp client set secondary-ntp=162.159.200.123
/ip dns set servers=1.1.1.1,8.8.8.8
/ip service set telnet disabled=yes
/ip service set ftp disabled=yes
/ip service set www disabled=yes
/ip service set api disabled=yes
/ip service set api-ssl disabled=yes

### BRIDGE/VLAN
/interface bridge add name=br-lan vlan-filtering=yes comment="NETOPSAI"
/interface bridge port add bridge=br-lan interface=ether2 comment="NETOPSAI:trunk LAN trunk"
/interface vlan add name=vlan10-mgmt vlan-id=10 interface=br-lan comment="NETOPSAI:mgmt"
/interface vlan add name=vlan20-staff vlan-id=20 interface=br-lan comment="NETOPSAI:staff"
/interface vlan add name=vlan30-guest vlan-id=30 interface=br-lan comment="NETOPSAI:guest"
/interface bridge vlan add bridge=br-lan vlan-ids=10 tagged=br-lan,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-lan vlan-ids=20 tagged=br-lan,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-lan vlan-ids=30 tagged=br-lan,ether2 comment="NETOPSAI:vlan-table"

### IP/DHCP
/ip address add address=10.10.0.1/24 interface=vlan10-mgmt comment="NETOPSAI:gw vlan10"
/ip address add address=10.20.0.1/24 interface=vlan20-staff comment="NETOPSAI:gw vlan20"
/ip pool add name=pool-vlan20 ranges=10.20.0.100-10.20.0.200 comment="NETOPSAI:dhcp vlan20"
/ip dhcp-server add name=dhcp-vlan20 interface=vlan20-staff address-pool=pool-vlan20 disabled=no comment="NETOPSAI:dhcp vlan20"
/ip dhcp-server network add address=10.20.0.0/24 gateway=10.20.0.1 dns-server=1.1.1.1,8.8.8.8 comment="NETOPSAI:dhcp network vlan20"
/ip address add address=10.30.0.1/24 interface=vlan30-guest comment="NETOPSAI:gw vlan30"
/ip pool add name=pool-vlan30 ranges=10.30.0.100-10.30.0.200 comment="NETOPSAI:dhcp vlan30"
/ip dhcp-server add name=dhcp-vlan30 interface=vlan30-guest address-pool=pool-vlan30 disabled=no comment="NETOPSAI:dhcp vlan30"
/ip dhcp-server network add address=10.30.0.0/24 gateway=10.30.0.1 dns-server=1.1.1.1,8.8.8.8 comment="NETOPSAI:dhcp network vlan30"

### FIREWALL
/interface list
:if ([:len [find name="NETOPSAI_WAN"]] = 0) do={ add name="NETOPSAI_WAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_LAN"]] = 0) do={ add name="NETOPSAI_LAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_MGMT"]] = 0) do={ add name="NETOPSAI_MGMT" comment="NETOPSAI" }
/interface list member add list="NETOPSAI_WAN" interface=ether1 comment="NETOPSAI:wan"
/interface list member add list="NETOPSAI_LAN" interface=ether2 comment="NETOPSAI:lan"
/ip firewall address-list
/ip firewall address-list add list=NETOPSAI_MGMT address=10.10.0.0/24 comment="NETOPSAI:mgmt"
/ip firewall filter
/ip firewall filter add chain=input connection-state=established,related action=accept comment="NETOPSAI:input established"
/ip firewall filter add chain=input connection-state=invalid action=drop comment="NETOPSAI:input invalid"
/ip firewall filter add chain=input protocol=icmp action=accept comment="NETOPSAI:input icmp"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=22 action=accept comment="NETOPSAI:input ssh mgmt"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=8291 action=accept comment="NETOPSAI:input winbox mgmt"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_WAN" action=drop comment="NETOPSAI:drop wan input"
/ip firewall filter add chain=input action=drop comment="NETOPSAI:input drop"
/ip firewall filter add chain=forward connection-state=established,related action=accept comment="NETOPSAI:fwd established"
/ip firewall filter add chain=forward connection-state=invalid action=drop comment="NETOPSAI:fwd invalid"
/ip firewall filter add chain=forward in-interface-list="NETOPSAI_LAN" out-interface-list="NETOPSAI_WAN" action=accept comment="NETOPSAI:lan to wan"
/ip firewall filter add chain=forward action=drop comment="NETOPSAI:fwd drop"

### NAT
/ip firewall nat
/ip firewall nat add chain=srcnat out-interface-list="NETOPSAI_WAN" action=masquerade comment="NETOPSAI:nat masquerade"

### SERVICES
/ip service set ssh disabled=no port=22
/ip service set winbox disabled=no port=8291
/ip dns set allow-remote-requests=no
/system logging action
/system logging action add name=NETOPSAI-remote target=remote remote=10.10.0.10 comment="NETOPSAI:syslog"
/system logging
/system logging add topics=info,warning,error action=NETOPSAI-remote comment="NETOPSAI:syslog"
/snmp set enabled=yes
/snmp community set [find default=yes] name=netopsai
"
`;

exports[`mikrotik full config generator > generates scripts for edge-nat-simple.json 2`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: edge-internet
# Hostname: EDGE-NAT-01
# RouterOS: 7.12.1
# Environment: dev
# Mode: ROLLBACK
### BRIDGE/VLAN
/interface bridge remove [find name=br-lan]
/interface bridge port remove [find bridge=br-lan interface=ether2]
/interface vlan remove [find name=vlan10-mgmt]
/interface vlan remove [find name=vlan20-staff]
/interface vlan remove [find name=vlan30-guest]
/interface bridge vlan remove [find bridge=br-lan vlan-ids=10]
/interface bridge vlan remove [find bridge=br-lan vlan-ids=20]
/interface bridge vlan remove [find bridge=br-lan vlan-ids=30]

### IP/DHCP
/ip address remove [find comment~"NETOPSAI:gw vlan10"]
/ip address remove [find comment~"NETOPSAI:gw vlan20"]
/ip dhcp-server network remove [find comment~"NETOPSAI:dhcp network vlan20"]
/ip dhcp-server remove [find comment~"NETOPSAI:dhcp vlan20"]
/ip pool remove [find comment~"NETOPSAI:dhcp vlan20"]
/ip address remove [find comment~"NETOPSAI:gw vlan30"]
/ip dhcp-server network remove [find comment~"NETOPSAI:dhcp network vlan30"]
/ip dhcp-server remove [find comment~"NETOPSAI:dhcp vlan30"]
/ip pool remove [find comment~"NETOPSAI:dhcp vlan30"]

### FIREWALL
/interface list member remove [find comment~"NETOPSAI:wan"]
/interface list member remove [find comment~"NETOPSAI:lan"]
/interface list member remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:addrlist"]
/ip firewall filter remove [find comment~"NETOPSAI:"]

### NAT
/ip firewall nat remove [find comment~"NETOPSAI:nat"]

### SERVICES
/system logging remove [find comment~"NETOPSAI:syslog"]
/system logging action remove [find comment~"NETOPSAI:syslog"]
# NOTE: SNMP rollback is best-effort; review /snmp settings manually.
"
`;

exports[`mikrotik full config generator > generates scripts for hospital-secure-syslog.json 1`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: edge-internet
# Hostname: HOSP-GW-01
# RouterOS: 7.12.1
# Environment: prod
# Mode: APPLY
### BASE
/system identity set name=HOSP-GW-01
/system clock set time-zone-name="Asia/Ho_Chi_Minh"
/system ntp client set enabled=yes
/system ntp client set primary-ntp=162.159.200.1
/system ntp client set secondary-ntp=162.159.200.123
/ip dns set servers=10.0.10.53,1.1.1.1
/ip service set telnet disabled=yes
/ip service set ftp disabled=yes
/ip service set www disabled=yes
/ip service set api disabled=yes
/ip service set api-ssl disabled=yes

### BRIDGE/VLAN
/interface bridge add name=br-lan vlan-filtering=yes comment="NETOPSAI"
/interface bridge port add bridge=br-lan interface=ether2 comment="NETOPSAI:trunk LAN trunk"
/interface vlan add name=vlan10-mgmt vlan-id=10 interface=br-lan comment="NETOPSAI:mgmt"
/interface vlan add name=vlan20-staff vlan-id=20 interface=br-lan comment="NETOPSAI:staff"
/interface bridge vlan add bridge=br-lan vlan-ids=10 tagged=br-lan,ether2 comment="NETOPSAI:vlan-table"
/interface bridge vlan add bridge=br-lan vlan-ids=20 tagged=br-lan,ether2 comment="NETOPSAI:vlan-table"

### IP/DHCP
/ip address add address=10.0.10.1/24 interface=vlan10-mgmt comment="NETOPSAI:gw vlan10"
/ip address add address=10.0.20.1/24 interface=vlan20-staff comment="NETOPSAI:gw vlan20"
/ip pool add name=pool-vlan20 ranges=10.0.20.100-10.0.20.200 comment="NETOPSAI:dhcp vlan20"
/ip dhcp-server add name=dhcp-vlan20 interface=vlan20-staff address-pool=pool-vlan20 disabled=no comment="NETOPSAI:dhcp vlan20"
/ip dhcp-server network add address=10.0.20.0/24 gateway=10.0.20.1 dns-server=10.0.10.53,1.1.1.1 comment="NETOPSAI:dhcp network vlan20"

### ROUTING
/ip route add dst-address=0.0.0.0/0 gateway=203.0.113.1 comment="NETOPSAI:default-route"

### FIREWALL
/interface list
:if ([:len [find name="NETOPSAI_WAN"]] = 0) do={ add name="NETOPSAI_WAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_LAN"]] = 0) do={ add name="NETOPSAI_LAN" comment="NETOPSAI" }
:if ([:len [find name="NETOPSAI_MGMT"]] = 0) do={ add name="NETOPSAI_MGMT" comment="NETOPSAI" }
/interface list member add list="NETOPSAI_WAN" interface=ether1 comment="NETOPSAI:wan"
/interface list member add list="NETOPSAI_LAN" interface=ether2 comment="NETOPSAI:lan"
/ip firewall address-list
/ip firewall address-list add list=NETOPSAI_MGMT address=10.0.0.0/16 comment="NETOPSAI:mgmt"
/ip firewall filter
/ip firewall filter add chain=input connection-state=established,related action=accept comment="NETOPSAI:input established"
/ip firewall filter add chain=input connection-state=invalid action=drop comment="NETOPSAI:input invalid"
/ip firewall filter add chain=input protocol=icmp action=accept comment="NETOPSAI:input icmp"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=22 action=accept comment="NETOPSAI:input ssh mgmt"
/ip firewall filter add chain=input src-address-list=NETOPSAI_MGMT protocol=tcp dst-port=8291 action=accept comment="NETOPSAI:input winbox mgmt"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_LAN" protocol=udp dst-port=53 action=accept comment="NETOPSAI:input dns udp"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_LAN" protocol=tcp dst-port=53 action=accept comment="NETOPSAI:input dns tcp"
/ip firewall filter add chain=input in-interface-list="NETOPSAI_WAN" action=drop comment="NETOPSAI:drop wan input"
/ip firewall filter add chain=input action=drop comment="NETOPSAI:input drop"
/ip firewall filter add chain=forward connection-state=established,related action=accept comment="NETOPSAI:fwd established"
/ip firewall filter add chain=forward connection-state=invalid action=drop comment="NETOPSAI:fwd invalid"
/ip firewall filter add chain=forward in-interface-list="NETOPSAI_LAN" out-interface-list="NETOPSAI_WAN" action=accept comment="NETOPSAI:lan to wan"
/ip firewall filter add chain=forward action=drop comment="NETOPSAI:fwd drop"

### NAT
/ip firewall nat
/ip firewall nat add chain=srcnat out-interface-list="NETOPSAI_WAN" action=masquerade comment="NETOPSAI:nat masquerade"

### SERVICES
/ip service set ssh disabled=no port=22
/ip service set winbox disabled=no port=8291
/ip dns set allow-remote-requests=yes
/system logging action
/system logging action add name=NETOPSAI-remote target=remote remote=10.0.10.10 comment="NETOPSAI:syslog"
/system logging
/system logging add topics=info,warning,error action=NETOPSAI-remote comment="NETOPSAI:syslog"
"
`;

exports[`mikrotik full config generator > generates scripts for hospital-secure-syslog.json 2`] = `
"# Generated by NetworkChangeMCP (NETOPSAI)
# Role: edge-internet
# Hostname: HOSP-GW-01
# RouterOS: 7.12.1
# Environment: prod
# Mode: ROLLBACK
### BRIDGE/VLAN
/interface bridge remove [find name=br-lan]
/interface bridge port remove [find bridge=br-lan interface=ether2]
/interface vlan remove [find name=vlan10-mgmt]
/interface vlan remove [find name=vlan20-staff]
/interface bridge vlan remove [find bridge=br-lan vlan-ids=10]
/interface bridge vlan remove [find bridge=br-lan vlan-ids=20]

### IP/DHCP
/ip address remove [find comment~"NETOPSAI:gw vlan10"]
/ip address remove [find comment~"NETOPSAI:gw vlan20"]
/ip dhcp-server network remove [find comment~"NETOPSAI:dhcp network vlan20"]
/ip dhcp-server remove [find comment~"NETOPSAI:dhcp vlan20"]
/ip pool remove [find comment~"NETOPSAI:dhcp vlan20"]

### ROUTING
/ip route remove [find comment~"NETOPSAI:default-route"]

### FIREWALL
/interface list member remove [find comment~"NETOPSAI:wan"]
/interface list member remove [find comment~"NETOPSAI:lan"]
/interface list member remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:mgmt"]
/ip firewall address-list remove [find comment~"NETOPSAI:addrlist"]
/ip firewall filter remove [find comment~"NETOPSAI:"]

### NAT
/ip firewall nat remove [find comment~"NETOPSAI:nat"]

### SERVICES
/system logging remove [find comment~"NETOPSAI:syslog"]
/system logging action remove [find comment~"NETOPSAI:syslog"]
"
`;
